--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <center>
                 <img src="euro.png" width="756px" height="189px">
                </center> 
-                <img src="tex.png" width="1260px" height="1550px">
+                 <img src="eurocenrismo.png" width="1220px" height="660px">
 
                 <hr size="1" width="100%" align="center" noshade color="#000000">
                 </section>
