--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <!-- Iniciando a seção euro -->
         <section id="euro">
             <center>
-                <img src="euro.png" width="756px" height="189px">
+                <img src="eurocentro.png" width="756px" height="189px">
                </center> 
                  <img src="eurocentro.png" width="1220px" height="660px">
 
